tests/sources/should-not-compile/while-stupid.c
int x = 10;
int y = 0;

while (x +)
    y = y + 1;
